force-app/main/default/objects/QB_Bill_Payment__c/QB_Bill_Payment__c.object-meta.xml
<CustomObject>
    <description>Bill Payment Events from QuickBooks</description>
    <label>QB Bill Payment</label>
    <nameField>
        <label>Bill Payment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Bill Payment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>