force-app/main/default/objects/QB_Bill_Payment__c/fields/QB_Account__c.field-meta.xml
<CustomField>
    <fullName>QB_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>QB_Bill_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>