force-app/main/default/objects/QB_Bill_Payment__c/fields/QB_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>QB_Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>