force-app/main/default/objects/QB_Bill_Payment__c/fields/QB_Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Account__c</fullName>
    <label>Payment Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>