force-app/main/default/objects/QB_Bill_Payment__c/fields/QB_QBO_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_QBO_Org_ID__c</fullName>
    <label>QuickBooks Org ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>