force-app/main/default/objects/QB_Bill_Payment__c/fields/QB_Sync_Token__c.field-meta.xml
<CustomField>
    <fullName>QB_Sync_Token__c</fullName>
    <label>Sync Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>