force-app/main/default/objects/QB_Bill_Payment__c/fields/QB_Vendor__c.field-meta.xml
<CustomField>
    <fullName>QB_Vendor__c</fullName>
    <label>Vendor</label>
    <referenceTo>QB_Company__c</referenceTo>
    <relationshipLabel>Bill Payments</relationshipLabel>
    <relationshipName>Bill_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>