force-app/main/default/objects/QB_Bill_Payment__c/fields/See_this_Payment_in_QBO__c.field-meta.xml
<CustomField>
    <fullName>See_this_Payment_in_QBO__c</fullName>
    <formula>HYPERLINK( &quot;https://&quot;&amp;IF( CONTAINS(QB_QBO_Org_Name__c , &quot;Sandbox Company&quot;), &quot;sandbox.&quot; ,&quot;&quot;)&amp;&quot;qbo.intuit.com/app/billpayment?txnId=&quot;&amp;RIGHT(QB_Payment_Id__c ,(LEN(QB_Payment_Id__c)-FIND(&apos;-&apos;, QB_Payment_Id__c))),
&quot;Click Here&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>See this Payment in QuickBooks</label>
    <type>Text</type>
</CustomField>